# modern_cmake

./: .gitignore  CMakeLists.txt
modern_cmake_addon/: CMakeLists.txt
modern_cmake_app/: CMakeLists.txt  Config.cmake.in  main.cpp
modern_cmake_core/: CMakeLists.txt  FawkesCore.pc.in  build.sh
modern_cmake_core/include/core/: core.h
modern_cmake_core/src/: core.cpp
modern_cmake_library/: CMakeLists.txt
